legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr25801.c-5.4.0-2.out.txt
pr25801.c: In function ‘f’:
pr25801.c:13:4: error: increment of pointer to an incomplete type ‘int[]’
   a++;  
    ^
pr25801.c:14:3: error: increment of pointer to an incomplete type ‘int[]’
   ++a;  
   ^
pr25801.c:15:4: error: decrement of pointer to an incomplete type ‘int[]’
   a--;  
    ^
pr25801.c:16:3: error: decrement of pointer to an incomplete type ‘int[]’
   --a;  
   ^
pr25801.c:17:3: error: invalid use of array with unspecified bounds
   a += 1;  
   ^
pr25801.c:18:3: error: invalid use of array with unspecified bounds
   a -= 1;  
   ^
pr25801.c:19:5: error: arithmetic on pointer to an incomplete type
   a - a;  
     ^
pr25801.c:21:4: error: increment of pointer to an incomplete type ‘struct S’
   s++;  
    ^
pr25801.c:22:3: error: increment of pointer to an incomplete type ‘struct S’
   ++s;  
   ^
pr25801.c:23:4: error: decrement of pointer to an incomplete type ‘struct S’
   s--;  
    ^
pr25801.c:24:3: error: decrement of pointer to an incomplete type ‘struct S’
   --s;  
   ^
pr25801.c:25:3: error: invalid use of undefined type ‘struct S’
   s += 1;  
   ^
pr25801.c:26:3: error: invalid use of undefined type ‘struct S’
   s -= 1;  
   ^
pr25801.c:27:5: error: arithmetic on pointer to an incomplete type
   s - s;  
     ^
pr25801.c:29:4: error: increment of pointer to an incomplete type ‘union U’
   u++;  
    ^
pr25801.c:30:3: error: increment of pointer to an incomplete type ‘union U’
   ++u;  
   ^
pr25801.c:31:4: error: decrement of pointer to an incomplete type ‘union U’
   u--;  
    ^
pr25801.c:32:3: error: decrement of pointer to an incomplete type ‘union U’
   --u;  
   ^
pr25801.c:33:3: error: invalid use of undefined type ‘union U’
   u += 1;  
   ^
pr25801.c:34:3: error: invalid use of undefined type ‘union U’
   u -= 1;  
   ^
pr25801.c:35:5: error: arithmetic on pointer to an incomplete type
   u - u;  
     ^
pr25801.c:37:4: error: increment of pointer to an incomplete type ‘enum E’
   e++;  
    ^
pr25801.c:38:3: error: increment of pointer to an incomplete type ‘enum E’
   ++e;  
   ^
pr25801.c:39:4: error: decrement of pointer to an incomplete type ‘enum E’
   e--;  
    ^
pr25801.c:40:3: error: decrement of pointer to an incomplete type ‘enum E’
   --e;  
   ^
pr25801.c:41:3: error: invalid use of undefined type ‘enum E’
   e += 1;  
   ^
pr25801.c:42:3: error: invalid use of undefined type ‘enum E’
   e -= 1;  
   ^
pr25801.c:43:5: error: arithmetic on pointer to an incomplete type
   e - e;  
     ^
